2006-03-21  Kristian Høgsberg  <krh@redhat.com>

	Make the server distcheck and tag 1.0.99.1 snapshot.
	
	* configure.ac: Bump CVS version to 1.0.99.1.

	* Makefile.am:
	* os/Makefile.am: 
	* Xext/Makefile.am: 
	* GL/mesa/glapi/Makefile.am:  Distcheck fixes.

2006-03-21  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxcmds.c: 
	* GL/glx/glxcmdsswap.c: #include indirect_dispatch to get
	prototypes for FBO functions.

	* GL/glx/glxcontext.h: 
	* GL/glx/glxserver.h: 
	* GL/glx/glxdri.c: Fix a couple of warnings.

2006-03-20  Donnie Berkholz  <spyderous@gentoo.org>

	reviewed by: Kristian Høgsberg

	* GL/glx/glxscreens.c: (__glXHyperpipeInit),
	(__glXSwapBarrierInit):
	* GL/glx/glxutil.h:
	* GL/glx/single2.c: (__glXDisp_FeedbackBuffer),
	(__glXDisp_SelectBuffer):
	* GL/glx/single2swap.c: (__glXDispSwap_FeedbackBuffer),
	(__glXDispSwap_SelectBuffer):
	Finish glx_ansic.h wrapper changes to make Xvfb and Xnest link again.

2006-03-20  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Init.c:
	Bug #6213: Check geteuid's return value, not its address, otherwise
	unprivileged users can set the modulepath and run arbitrary code.
	Patch from Matthieu Herrb.  (CVE-2006-0745, Coverity #4)

	* cfb/cfbrrop.h:
	Bug #5549: Fix build for sparc64.  (Matthieu Herrb)

2006-03-16  Kristian Høgsberg  <krh@redhat.com>

	* configure.ac: Check for glproto when building GLX and make sure
	we have at least 1.4.6.

	* GL/glx/*.c: Drop glx_ansic.h wrapper and call xalloc, xrealloc,
	xfree and str-funcs directly.
	
	* GL/glx/glxcmds.c (GlxSetRenderTables): Really add this.

2006-03-16  Kristian Høgsberg  <krh@redhat.com>

	More patches from David Reveman:

	* GL/glx/glxscreens.c: Add GL_ARB_texture_non_power_of_two,
	GL_EXT_framebuffer_object and GL_NV_texture_env_combine4
	extensions.

	* GL/glx/glxcmds.c (__glXContextDestroy, DoMakeCurrent)
	(__glXdirectContextDestroy): Add __GLXcontext destructor and flush
	context cache there and on loseCurrent.
